fix(modal): added a max height to the modal as well as overflow handling.
affects: @entur/modal

When there is too much in the modal it sticks to the top of the screen
making it hard to see that
it is a modal.

ISSUES CLOSED: ¨

--- a/packages/modal/src/styles.scss
+++ b/packages/modal/src/styles.scss
@@ -25,6 +25,8 @@
   position: relative;
   outline: none;
   width: 100%;
+  max-height: 90vh;
+  overflow: auto;
   z-index: $z-indexes-modal;
 
   &--size-extra-small {
